--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -1,3 +1,195 @@
-@mainColor: blue;
+@mainColor: #EA862E;
+@backgroundColor: #FFFFF5;
+@headerColor: #000;
+@buttonTextColor: #fff;
+@panel-background-color: #F8F9FB;
+
+@headerOpacity: 0.75;
+
+@panel-width: 224px;
+@header-height: 70px;
+@sticker-width: 75px;
 
 @import "pizza/pizza-card";
+
+body{
+  background: @backgroundColor;
+}
+h3{
+  color: @mainColor;
+}
+.badge{
+  background-color: @mainColor;
+}
+
+.left-panel{
+
+  .header {
+    background: @headerColor;
+    color: @buttonTextColor;
+    opacity: @headerOpacity;
+    padding: 10px 20px;
+    right: 0;
+    top: 0;
+    z-index: 900;
+
+    .header-top {
+      padding-bottom: 5px;
+      border-bottom: 1px solid @buttonTextColor;
+      opacity: @headerOpacity;
+
+      span {
+        margin-right: 25px;
+      }
+    }
+  }
+
+  .content{
+    padding-top: @header-height;
+  }
+
+  .inner-header{
+    margin-bottom: 35px;
+  }
+
+}
+
+.right-panel {
+  position: fixed!important;
+  top:0;
+  right:0;
+  bottom: 0;
+
+  min-width: @panel-width;
+  height: 100%;
+  z-index: 9999;
+  background: @panel-background-color;
+
+  margin-left: 20px;
+  padding-right: 0!important;
+  padding-left: 0!important;
+
+  box-shadow: rgba(0, 0, 0, 0.2)  -3px 3px 10px;
+
+  .header{
+    background-color: @backgroundColor;
+    height: @header-height;
+    opacity:1;
+
+    .clear {
+      font-size: 12px;
+      margin: 10px auto;
+      cursor: pointer;
+    }
+
+    .navbar-header {
+      width: 100%;
+    }
+  }
+
+  .content{
+    padding-left: 15px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+}
+
+.pizza-booked{
+
+  position: relative;
+  padding-bottom: 10px;
+  border-bottom: 1px solid lighten(#000, 85%);
+
+  .radius{
+    margin-right: 10px;
+  }
+
+  .buttons{
+    .glyphicon{
+
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 50%;
+      color: white;
+
+      -webkit-transition: background-color .1s ease;
+      -moz-transition: background-color .1s ease;
+      -o-transition: background-color .1s ease;
+      transition: background-color .1s ease;
+
+      &.glyphicon-plus{
+        background-color: #5CB85C;
+      }
+      &.glyphicon-plus:hover{
+        background-color: #449D44;
+      }
+
+      &.glyphicon-minus{
+        margin-left: 20px;
+        background-color: #D9534F;
+      }
+      &.glyphicon-minus:hover{
+        background-color: #C9302C;
+      }
+
+      &.glyphicon-remove{
+        margin-left: 20px;
+        background-color: #F0AD4E;
+      }
+      &.glyphicon-remove:hover{
+        background-color: #EC971F;
+      }
+    }
+  }
+
+  .image{
+    img{
+      max-height: 88px;
+      position: absolute;
+      right: -30px;
+      top:20px;
+    }
+  }
+}
+
+.footer{
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: @backgroundColor;
+  position: absolute;
+  bottom:0;
+  width: 100%;
+  border-top: 1px solid lighten(#000, 85%);
+  padding-top: 15px;
+
+  .summ{
+    margin-right: 15px;
+    font-size: 18px;
+  }
+  
+  button{
+    margin-top: 15px;
+    width: 100%;
+  }
+}
+
+.sticker{
+  background-color: @mainColor;
+  color: #fff;
+  position: fixed;
+  bottom:0;
+  left: 15px;
+  padding: 15px;
+  width: @sticker-width;
+
+  img{
+    width: @sticker-width;
+    position: absolute;
+    left: 0;
+    top: -8px;
+  }
+}
