--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -1,10 +1,25 @@
 .pizza-card {
-  img {
-    max-width: 250px;
-  }
+  position: relative;
 
   h3 {
     color: @mainColor;
     background-color: lighten(@mainColor, 45%);
+  }
+
+  .label{
+    font-size: 15px;
+
+    position: absolute;
+    top:-10px;
+    right:-10px;
+  }
+
+  .type{
+    font-size: 12px;
+    color: lighten(#000, 50%);
+  }
+
+  .price{
+    font-size: 24px;
   }
 }
