A little bit more responsive

--- a/Frontend/www/assets/less/panels/right-panel.less
+++ b/Frontend/www/assets/less/panels/right-panel.less
@@ -20,6 +20,10 @@
     height: @header-height;
     opacity:1;
 
+    h4.navbar-brand{
+      padding-right: 0;
+    }
+
     .clear {
       font-size: 12px;
       margin: 10px auto;
@@ -38,6 +42,10 @@
 
     &::-webkit-scrollbar {
       display: none;
+    }
+
+    h4{
+      color: @mainColor;
     }
   }
 }
