--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -1,6 +1,11 @@
 .pizza-card {
   position: relative;
 
+  .description{
+    max-height: 60px;
+    overflow-y: auto;
+  }
+
   h3 {
     color: @mainColor;
     background-color: lighten(@mainColor, 45%);
