--- a/Frontend/templates/PizzaMenu_OneItem.ejs
+++ b/Frontend/templates/PizzaMenu_OneItem.ejs
@@ -16,26 +16,40 @@ function getIngredientsArray(pizza) {
     return result;
 }
 
-   %>
-<div class="col-md-6 col-lg-4 pizza-card">
-    <div class="thumbnail">
-        <img class="pizza-icon" src="<%= pizza.icon %>" alt="Pizza">
+%>
 
+<div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail pizza-card">
+        <img src="<%= pizza.icon %>">
         <% if(pizza.is_new) { %>
         <span class="label label-danger">Нова</span>
         <% } else if(pizza.is_popular) {%>
         <span class="label label-success">Популярна</span>
         <% } %>
-
         <div class="caption">
-            <span class="title"><%= pizza.title %></span>
-            <div class="type"><%= pizza.type %></div>
-            <div class="description">
-                <%= getIngredientsArray(pizza).join(", ") %>
+            <h3 class="title"><%= pizza.title %></h3>
+            <p class="type"><%= pizza.type %></p>
+            <p class="description"><%= getIngredientsArray(pizza).join(", ") %></p>
+
+            <div class="row text-center">
+                <% if(pizza.small_size){%>
+                <div class="col-md-6 col-sm-6 col-xs-6">
+                    <p class="radius"><img src="assets/images/size-icon.svg"> <%= pizza.small_size.size %></p>
+                    <p class="weight"><img src="assets/images/weight.svg"> <%= pizza.small_size.weight %></p>
+                    <b><span class="price"><%= pizza.small_size.price %></span></b><br/>
+                    <b><p class="money">грн</p></b>
+                    <a href="#" class="btn btn-success buy-small">Купити</a>
+                </div>
+                <% } if(pizza.big_size){ %>
+                <div class="col-md-6 col-sm-6 col-xs-6">
+                    <p class="radius"><img src="assets/images/size-icon.svg"> <%= pizza.big_size.size %></p>
+                    <p class="weight"><img src="assets/images/weight.svg"> <%= pizza.big_size.weight %></p>
+                    <b><span class="price"><%= pizza.big_size.price %></span></b><br/>
+                    <b><p class="money">грн</p></b>
+                    <a href="#" class="btn btn-success buy-big">Купити</a>
+                </div>
+                <% } %>
             </div>
         </div>
-
-        <!-- Перед тим щоб показати кнопку необхідно переконатися, що піца має великий розмір -->
-        <button class="btn btn-primary buy-big">Купити велику</button>
     </div>
 </div>
