--- a/Frontend/www/assets/less/panels/right-panel.less
+++ b/Frontend/www/assets/less/panels/right-panel.less
@@ -36,17 +36,15 @@
   }
 
   .content{
+    max-height: 450px;
     padding-left: 15px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
 
     h4{
       color: @mainColor;
     }
+
   }
 }
 
