Finished Local storage

--- a/Frontend/templates/PizzaCart_OneItem.ejs
+++ b/Frontend/templates/PizzaCart_OneItem.ejs
@@ -4,7 +4,7 @@
         <span class="radius"><img src="assets/images/size-icon.svg"> <%= pizza[size].size %></span>
         <span class="weight"><img src="assets/images/weight.svg"> <%= pizza[size].weight %></span>
         <p class="buttons">
-            <b><span class="price"><%= pizza[size].price %></span>грн </b>
+            <b><span class="price"><%= pizza[size].price*quantity %></span>грн </b>
             <span class="glyphicon glyphicon-minus minus" aria-hidden="true"></span>
             <span class="count-label"><%= quantity %></span>
             <span class="glyphicon glyphicon-plus plus" aria-hidden="true"></span>
