--- a/Backend/views/common/footer.ejs
+++ b/Backend/views/common/footer.ejs
@@ -1,3 +1,8 @@
+<footer class="footer main-footer text-center">
+    <p>Pizza - ще один практичний проект в межах курсу JavaScript в Києво-Могилянській Академії</p>
+    <p>Доставка піци не здійснюється</p>
+</footer>
+
 <!-- jQuery JavaScript -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
