--- a/Backend/views/common/header.ejs
+++ b/Backend/views/common/header.ejs
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Pizza</title>
+    <title><%= pageTitle%></title>
 
     <!-- Bootsrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
 
 <div class="container">
     <div class="row main header navbar-fixed-top">
-        <div class="col-lg-2 col-md-1 col-sm-2 col-xs-2 navbar-brand logo text-center"><span>Logo</span></div>
+        <div class="col-lg-2 col-md-1 col-sm-2 col-xs-2 navbar-brand logo text-center"><span><a href="/">Logo</a></span></div>
         <div class="col-lg-6 col-md-6 col-sm-4 col-xs-3">
             <div class="row">
                 <div class="col-md-12 header-top">
