--- a/Backend/views/mainPage.ejs
+++ b/Backend/views/mainPage.ejs
@@ -1,7 +1,7 @@
 <% include common/header.ejs %>
 
 <div class="container">
-    <div class="row">
+    <div class="row main-page-panel">
         <div class="col-lg-9 col-md-8 col-sm-8 col-xs-7 left-panel">
 
             <div class="col-lg-12 content">
