--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -6,7 +6,7 @@
 
 @headerOpacity: 0.75;
 
-@panel-width: 224px;
+@panel-width: 340px;
 @header-height: 70px;
 @sticker-width: 75px;
 
@@ -25,8 +25,6 @@ h3{
   background-color: @mainColor;
 }
 
-
-
 .sticker{
   background-color: @mainColor;
   color: #fff;
@@ -35,6 +33,7 @@ h3{
   left: 15px;
   padding: 15px;
   width: @sticker-width;
+  z-index: 9999;
 
   img{
     width: @sticker-width;
@@ -62,4 +61,13 @@ h3{
       margin-right: 25px;
     }
   }
+}
+
+.main-footer{
+  padding-right: @panel-width;
+  position: relative !important;
+}
+.validation-fail{
+  margin-left: 100px;
+  color: #880a02;
 }
