--- a/Backend/views/common/rightPanel.ejs
+++ b/Backend/views/common/rightPanel.ejs
@@ -13,7 +13,11 @@
         <div class="row">
             <div class="col-md-12">
                 <b><span>Сума <span class="visible-lg-inline-block visible-md-inline-block visible-sm-inline-block">замовлення</span></span><span class="pull-right"><span class="summ">500</span> грн</span></b>
-                <p><button class="btn btn-warning makeOrder">Замовити</button> </p>
+                <% if (pageTitle === 'Замовити Піцу') { %>
+                    <p><button class="btn btn-default editOrder">Редагувати замовлення</button> </p>
+                <% } else { %>
+                    <p><button class="btn btn-warning makeOrder">Замовити</button> </p>
+                <% } %>
             </div>
         </div>
     </div>
