--- a/Backend/views/common/footer.ejs
+++ b/Backend/views/common/footer.ejs
@@ -12,5 +12,9 @@
 
 <!--Own JavaScript -->
 <script type="text/javascript" src="assets/js/main.js"></script>
+<!--Google Maps-->
+<script	type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAXNLxbVB_XmnEPDnvneMADfGD7Q9lvf6k"></script>
+<!--liqPay-->
+<script	type="text/javascript" src="http://static.liqpay.com/libjs/checkout.js"></script>
 </body>
 </html>
