--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -71,3 +71,34 @@ h3{
   margin-left: 100px;
   color: #880a02;
 }
+
+.order-page-panel .google-maps {
+  padding-left: 50px;
+  width: 100%;
+  height: 250px;
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
+
+.bs-callout {
+  padding: 20px;
+  margin: 0;
+  border: 1px solid #eee;
+  border-left-width: 5px;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
+.bs-callout h4 {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.bs-callout p:last-child {
+  margin-bottom: 0;
+}
+
+.bs-callout-warning {
+  border-left-color: #f0ad4e;
+}
+.bs-callout-warning h4 {
+  color: #f0ad4e;
+}
